User Profile is changed to responsive

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>TuckIndia - {% block title %}Home{% endblock %}</title>
+    <title>SecondStrap - {% block title %}Home{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href={% static "images/logo.jpg" %}>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -170,7 +170,7 @@
     </div>
     <header class="header">
         <nav class="navbar container">
-            <a href="/" class="logo">TuckIndia</a>
+            <a href="/" class="logo">SecondStrap</a>
 
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
@@ -242,7 +242,7 @@
                 <h4>Contact & Service</h4>
                 <ul>
                     <li>+1 123 456 7890</li>
-                    <li>info@TuckIndia.in.com</li>
+                    <li>info@SecondStrap.in.com</li>
                     <li>FAQs</li>
                     <li>Returns</li>
                     <li>Shipping</li>
@@ -273,8 +273,8 @@
 
         <hr class="footer-divider">
         <div class="footer-bottom container">
-            <p>© 2023 TuckIndia.in All rights reserved.</p>
-            <p>Designed by TuckIndia.in</p>
+            <p>© 2023 SecondStrap.in All rights reserved.</p>
+            <p>Designed by SecondStrap.in</p>
         </div>
     </footer>
 
