In User Profile Page . Address OrderPayment And information Page is Now Ready From the Frontend

--- a/userFolder/userprofile/templates/userprofile/profile.html
+++ b/userFolder/userprofile/templates/userprofile/profile.html
@@ -1,6 +1,7 @@
 {% extends "./profile_base.html" %}
+{% load static %}
 {% block profile_extra_style %}
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/userprofile/profile.css">
 {% endblock profile_extra_style %}
 
 {% block profile_content %}
