Wallet is added to the side-bar . Make the profile page complete Responsive and cleared the Phone View issue in the horizontal Scroll

--- a/userFolder/userprofile/templates/userprofile/profile.html
+++ b/userFolder/userprofile/templates/userprofile/profile.html
@@ -33,4 +33,16 @@
                 </dl>
             </div>
         </div>
+        <div class="profile-stats-row">
+            <div class="stat-card">
+                <i class='bx bxs-group'></i>
+                <div class="stat-info">
+                    <h4>Total Referrals</h4>
+                    <p class="stat-value">12</p>
+                </div>
+                <a href="#" class="stat-link">
+                    See details <i class='bx bx-right-arrow-alt'></i>
+                </a>
+            </div>
+        </div>
 {% endblock profile_content %} 
