--- a/userFolder/userprofile/templates/userprofile/profile_base.html
+++ b/userFolder/userprofile/templates/userprofile/profile_base.html
@@ -97,7 +97,7 @@
 </div>
 {% endblock content %}
 
-{% block extra_script %}
+{% block profile_extra_scripts %}
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         // 1. Find the active link inside your mobile navigation
@@ -116,4 +116,4 @@
         }
     });
 </script>
-{% endblock extra_script %}
+{% endblock profile_extra_scripts %}
